--- a/Recommendation_Outline.ipynb
+++ b/Recommendation_Outline.ipynb
@@ -2780,7 +2780,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![alt text](user_recommendations.png, \"User Recm)\n"
+   ]
   },
   {
    "cell_type": "code",
