--- a/Recommendation_Outline.ipynb
+++ b/Recommendation_Outline.ipynb
@@ -2781,7 +2781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](user_recommendations.png, \"User Recm)\n"
+    "![alt text](user_recommendations.png)\n"
    ]
   },
   {
