Work flow edits

--- a/Toronto_Model.ipynb
+++ b/Toronto_Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -65,8 +65,8 @@
     "    \n",
     "    # Limit new dataframe to Users with above 20 reviews included and businesses with above 10 reviews\n",
     "    # In tests this yeiled the most consistent results\n",
-    "    df_merge = df_merge.groupby('user_id').filter(lambda group: len(group) > 20)\n",
-    "    df_merge = df_merge.groupby('business_id').filter(lambda group: len(group) > 10)\n",
+    "    df_merge = df_merge.groupby('user_id').filter(lambda group: len(group) > 25)\n",
+    "    df_merge = df_merge.groupby('business_id').filter(lambda group: len(group) > 15)\n",
     "    \n",
     "    # Print Merged Dataframe Counts \n",
     "    print(\"City: %s \" %business_city)\n",
@@ -108,10 +108,10 @@
     "\n",
     "    # Define Algorithm for Model\n",
     "    \n",
-    "    #algo = sim_options = {'name': 'cosine',\n",
-    "    #            'user_based': True  # compute  similarities between items\n",
-    "    #           }\n",
-    "    #algo = KNNBasic(sim_options=sim_options)\n",
+    "#     algo = sim_options = {'name': 'msd',\n",
+    "#     #            'user_based': True  # compute  similarities between items\n",
+    "#                }\n",
+    "#     algo = KNNBasic(sim_options=sim_options)\n",
     "    \n",
     "    algo = SVD()\n",
     "\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -137,45 +137,45 @@
      "output_type": "stream",
      "text": [
       "City: Toronto \n",
-      "Number of reviews included: 3224 \n",
+      "Number of reviews included: 72697 \n",
       "\n",
-      "Number of unique users included: 119\n",
+      "Number of unique users included: 1334\n",
       "\n",
-      "Number of unique businesses included: 105\n",
+      "Number of unique businesses included: 1737\n",
       "\n",
       "\n",
-      "count    3224.000000\n",
-      "mean        3.754342\n",
-      "std         0.893219\n",
-      "min         1.000000\n",
-      "25%         3.000000\n",
-      "50%         4.000000\n",
-      "75%         4.000000\n",
-      "max         5.000000\n",
+      "count    72697.000000\n",
+      "mean         3.637743\n",
+      "std          1.011468\n",
+      "min          1.000000\n",
+      "25%          3.000000\n",
+      "50%          4.000000\n",
+      "75%          4.000000\n",
+      "max          5.000000\n",
       "Name: stars, dtype: float64\n",
       "\n",
       "\n",
       "Baseline Scores using Random Ratings\n",
-      "RMSE: 1.2472\n",
-      "1.2471766155244717\n",
-      "MAE:  0.9965\n",
-      "0.9964798296857523\n",
+      "RMSE: 1.3801\n",
+      "1.3801073287371293\n",
+      "MAE:  1.1036\n",
+      "1.1036334669667294\n",
       "\n",
       "\n",
       "Accuracy Score Using Model\n",
-      "RMSE: 0.8426\n",
-      "0.8425689305418099\n",
-      "MAE:  0.6545\n",
-      "0.6545289174222104\n",
-      "CPU times: user 55.9 s, sys: 11.9 s, total: 1min 7s\n",
-      "Wall time: 1min 12s\n"
+      "RMSE: 0.9184\n",
+      "0.9183702674322028\n",
+      "MAE:  0.7214\n",
+      "0.7214425272850025\n",
+      "CPU times: user 1min 12s, sys: 47.9 s, total: 2min\n",
+      "Wall time: 2min 35s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "model_stats(\"Toronto\", 300, 100)"
+    "model_stats(\"Toronto\", 50, 50)"
    ]
   },
   {
@@ -367,13 +367,13 @@
     "\n",
     "# First train an SVD algorithm on the movielens dataset.\n",
     "trainset = data.build_full_trainset()\n",
-    "# algo = sim_options = {'name': 'cosine',\n",
+    "algo = sim_options = {'name': 'msd',\n",
     "#                  'user_based': True  # compute  similarities between items \n",
-    "#                 }\n",
+    "                 }\n",
     "    \n",
-    "# algo = KNNBasic(sim_options=sim_options)\n",
+    "algo = KNNBasic(sim_options=sim_options)\n",
     "\n",
-    "algo = SVD()\n",
+    "#algo = SVD()\n",
     "               \n",
     "algo.fit(trainset)\n",
     "\n",
