Cleaned Up Cell Notation

--- a/Recommendation_Outline.ipynb
+++ b/Recommendation_Outline.ipynb
@@ -25,32 +25,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: folium in /anaconda3/lib/python3.6/site-packages\r\n",
-      "Requirement already satisfied: requests in /anaconda3/lib/python3.6/site-packages (from folium)\r\n",
-      "Requirement already satisfied: branca in /anaconda3/lib/python3.6/site-packages (from folium)\r\n",
-      "Requirement already satisfied: six in /anaconda3/lib/python3.6/site-packages (from folium)\r\n",
-      "Requirement already satisfied: jinja2 in /anaconda3/lib/python3.6/site-packages (from folium)\r\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /anaconda3/lib/python3.6/site-packages (from requests->folium)\r\n",
-      "Requirement already satisfied: idna<2.7,>=2.5 in /anaconda3/lib/python3.6/site-packages (from requests->folium)\r\n",
-      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /anaconda3/lib/python3.6/site-packages (from requests->folium)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /anaconda3/lib/python3.6/site-packages (from requests->folium)\r\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /anaconda3/lib/python3.6/site-packages (from jinja2->folium)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install folium"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1881,7 +1855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge Datasets so that Masks create a limited a single DataFrame"
+    "### Merge Datasets so that masks create a limited single DataFrame"
    ]
   },
   {
@@ -2083,7 +2057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set Minimum # of User Reviews to Be Included"
+    "#### Set Minimum # of User Reviews to Be Included in Sample"
    ]
   },
   {
@@ -2101,7 +2075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set Minimum # of Business Reviews to Be Included"
+    "#### Set Minimum # of Business Reviews to Be Included in Sample"
    ]
   },
   {
@@ -2200,6 +2174,13 @@
    "source": [
     "sns.distplot(df['business_id'].value_counts(), axlabel='Reviews/Business')\n",
     "plt.title(\"Distribution of Reviews/Business\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adjusted limits help create a more normally distributed sample"
    ]
   },
   {
@@ -2315,23 +2296,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create/Test Models Using Surprise Package"
+    "## Create Model Using Surprise Package"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline Scores using Random Ratings\n",
-      "RMSE: 1.2778\n",
-      "1.2778118788578532\n",
-      "MAE:  1.0278\n",
-      "1.0278400245573045\n"
+      "Baseline Error using Random Ratings\n",
+      "RMSE: 1.2883\n",
+      "1.2882701445776201\n",
+      "MAE:  1.0247\n",
+      "1.0246816337432183\n"
      ]
     }
    ],
@@ -2346,7 +2327,6 @@
     "# Establish Baseline Scoring for Model \n",
     "# Algorithm predicting a random rating based on the distribution of the training set, which is assumed to be normal.\n",
     "algo = NormalPredictor()\n",
-    "#algo = BaselineOnly()\n",
     "\n",
     "# Use Train_Test_Split on data\n",
     "trainset, testset = train_test_split(data=data, test_size=.3, random_state=9)\n",
@@ -2356,14 +2336,14 @@
     "random_predictions = algo.test(testset)\n",
     "\n",
     "# Then compute RMSE & MAE for Random \n",
-    "print(\"Baseline Scores using Random Ratings\")\n",
+    "print(\"Baseline Error using Random Ratings\")\n",
     "print(accuracy.rmse(random_predictions))\n",
     "print(accuracy.mae(random_predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -2372,7 +2352,7 @@
      "text": [
       "Computing the msd similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "Accuracy Score Using Fitted Model\n",
+      "Error Using MSD and KNN Model\n",
       "RMSE: 0.8874\n",
       "0.8874273087463611\n",
       "MAE:  0.6888\n",
@@ -2383,17 +2363,10 @@
    "source": [
     "# Define Algorithm for Model\n",
     "\n",
-    "# algo = sim_options = {'name': 'cosine',\n",
-    "#                 'user_based': True  # compute  similarities between items\n",
-    "#                 }\n",
-    "\n",
     "algo = sim_options = {'name': 'msd',\n",
-    "#                'user_based': True  # compute  similarities between items\n",
     "                }\n",
     "\n",
     "algo = KNNBasic(sim_options=sim_options)\n",
-    "\n",
-    "#algo = SVD()\n",
     "\n",
     "# Use Train_Test_Split on data\n",
     "trainset, testset = train_test_split(data=data, test_size=.3, random_state=9)\n",
@@ -2403,7 +2376,7 @@
     "predictions = algo.test(testset)\n",
     "\n",
     "# Then compute RMSE & MAE\n",
-    "print(\"Accuracy Score Using Fitted Model\")\n",
+    "print(\"Error Using MSD and KNN Model\")\n",
     "print(accuracy.rmse(predictions))\n",
     "print(accuracy.mae(predictions))"
    ]
@@ -2445,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2537,7 @@
        "4        4.626630  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2597,15 +2570,14 @@
     "    return top_n\n",
     "\n",
     "\n",
-    "# First train an SVD algorithm on the movielens dataset.\n",
+    "# Create a training set using all ratings\n",
     "trainset = data.build_full_trainset()\n",
-    "algo = sim_options = {'name': 'msd',\n",
-    "#                 'user_based': True  # compute  similarities between items \n",
+    "\n",
+    "# Train model using MSD measurement and KNN\n",
+    "algo = sim_options = {'name': 'msd'\n",
     "                }\n",
     "    \n",
     "algo = KNNBasic(sim_options=sim_options)\n",
-    "\n",
-    "#algo = SVD()\n",
     "               \n",
     "algo.fit(trainset)\n",
     "\n",
@@ -2970,7 +2942,7 @@
     "    # Create user_recommendations df from new_recommendation function\n",
     "    user_recommendations = new_user_recommendations(user)\n",
     "\n",
-    "    # Create interactive map w/ top 5 recommendations dropped as points\n",
+    "    # Create interactive map w/ top 3 recommendations dropped as markers\n",
     "    location=[user_recommendations.iloc[0]['latitude'], user_recommendations.iloc[0]['longitude']]\n",
     "    m = folium.Map(location, width='80%', height='80%', max_zoom=15, min_zoom=11, zoom_start=11, control_scale=True)\n",
     "    for i in range(0,len(user_recommendations)):\n",
@@ -6388,7 +6360,9 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
