--- a/Recommendation_Outline.ipynb
+++ b/Recommendation_Outline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 349,
    "metadata": {
     "collapsed": true
    },
@@ -15,9 +15,9 @@
     "import folium \n",
     "from sklearn.metrics.pairwise import (cosine_similarity, euclidean_distances, manhattan_distances) \n",
     "from IPython.display import display\n",
-    "from surprise import SVD, Dataset, NormalPredictor, Reader, accuracy, KNNBasic, evaluate, BaselineOnly\n",
+    "from surprise import SVD, Dataset, NormalPredictor, Reader, accuracy, KNNBasic, KNNWithZScore, KNNWithMeans, KNNBaseline, evaluate\n",
     "from surprise import get_dataset_dir\n",
-    "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV, KFold\n",
+    "from surprise.model_selection import train_test_split\n",
     "from collections import defaultdict\n",
     "\n",
     "\n",
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -2309,10 +2309,10 @@
      "output_type": "stream",
      "text": [
       "Baseline Error using Random Ratings\n",
-      "RMSE: 1.2883\n",
-      "1.2882701445776201\n",
-      "MAE:  1.0247\n",
-      "1.0246816337432183\n"
+      "RMSE: 1.2723\n",
+      "1.2722535052291544\n",
+      "MAE:  1.0199\n",
+      "1.0198840690190076\n"
      ]
     }
    ],
@@ -2343,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -2352,11 +2352,11 @@
      "text": [
       "Computing the msd similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "Error Using MSD and KNN Model\n",
-      "RMSE: 0.8874\n",
-      "0.8874273087463611\n",
-      "MAE:  0.6888\n",
-      "0.6887515792673092\n"
+      "Error Using MSD and KNNWithMeans Model\n",
+      "RMSE: 0.8648\n",
+      "0.8647681232455616\n",
+      "MAE:  0.6725\n",
+      "0.6725002270938957\n"
      ]
     }
    ],
@@ -2366,7 +2366,7 @@
     "algo = sim_options = {'name': 'msd',\n",
     "                }\n",
     "\n",
-    "algo = KNNBasic(sim_options=sim_options)\n",
+    "algo = KNNWithMeans(sim_options=sim_options)\n",
     "\n",
     "# Use Train_Test_Split on data\n",
     "trainset, testset = train_test_split(data=data, test_size=.3, random_state=9)\n",
@@ -2376,7 +2376,7 @@
     "predictions = algo.test(testset)\n",
     "\n",
     "# Then compute RMSE & MAE\n",
-    "print(\"Error Using MSD and KNN Model\")\n",
+    "print(\"Error Using MSD and KNNWithMeans Model\")\n",
     "print(accuracy.rmse(predictions))\n",
     "print(accuracy.mae(predictions))"
    ]
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -2464,51 +2464,51 @@
        "      <th>0</th>\n",
        "      <td>3wB-JjsUjkvdNUDRnChsVg</td>\n",
        "      <td>NCFwm2-TDb-oBQ2medmYDg</td>\n",
-       "      <td>4.810028</td>\n",
+       "      <td>4.548096</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.636480</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.611072</td>\n",
+       "      <td>4.452554</td>\n",
+       "      <td>ty5KQYqYRxwXDG_e4pz-4w</td>\n",
+       "      <td>4.342305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>YMgZqBUAddmFErxLtCfK_w</td>\n",
        "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.714935</td>\n",
+       "      <td>4.505934</td>\n",
        "      <td>BH9z7IJ4zydAqgwsbqoVZQ</td>\n",
-       "      <td>4.642487</td>\n",
-       "      <td>A-uZAD4zP3rRxb44WUGV5w</td>\n",
-       "      <td>4.485305</td>\n",
+       "      <td>4.483402</td>\n",
+       "      <td>sqRX-XLlhx4rs2c1TpBf8A</td>\n",
+       "      <td>4.354010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>wa40Yx8wrZfiRqTgZsdd0g</td>\n",
        "      <td>NCFwm2-TDb-oBQ2medmYDg</td>\n",
-       "      <td>4.759778</td>\n",
+       "      <td>4.201278</td>\n",
        "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.719384</td>\n",
+       "      <td>4.099090</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.657616</td>\n",
+       "      <td>4.082000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>CiJat5Up2jAO3B0qTbiN5Q</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.680372</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.655322</td>\n",
+       "      <td>4.880460</td>\n",
        "      <td>sqRX-XLlhx4rs2c1TpBf8A</td>\n",
-       "      <td>4.544820</td>\n",
+       "      <td>4.816272</td>\n",
+       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
+       "      <td>4.780135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>wkrFqNxwTEEkG3mJV88Izw</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.671760</td>\n",
+       "      <td>MpmFFw0GE_2iRFPdsRpJbA</td>\n",
+       "      <td>4.644147</td>\n",
        "      <td>BH9z7IJ4zydAqgwsbqoVZQ</td>\n",
-       "      <td>4.644328</td>\n",
-       "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.626630</td>\n",
+       "      <td>4.642222</td>\n",
+       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
+       "      <td>4.635950</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2516,28 +2516,28 @@
       ],
       "text/plain": [
        "                  user_id      1st Recommendation  1st Est Rating  \\\n",
-       "0  3wB-JjsUjkvdNUDRnChsVg  NCFwm2-TDb-oBQ2medmYDg        4.810028   \n",
-       "1  YMgZqBUAddmFErxLtCfK_w  IhNASEZ3XnBHmuuVnWdIwA        4.714935   \n",
-       "2  wa40Yx8wrZfiRqTgZsdd0g  NCFwm2-TDb-oBQ2medmYDg        4.759778   \n",
-       "3  CiJat5Up2jAO3B0qTbiN5Q  IhNASEZ3XnBHmuuVnWdIwA        4.680372   \n",
-       "4  wkrFqNxwTEEkG3mJV88Izw  IhNASEZ3XnBHmuuVnWdIwA        4.671760   \n",
+       "0  3wB-JjsUjkvdNUDRnChsVg  NCFwm2-TDb-oBQ2medmYDg        4.548096   \n",
+       "1  YMgZqBUAddmFErxLtCfK_w  IhNASEZ3XnBHmuuVnWdIwA        4.505934   \n",
+       "2  wa40Yx8wrZfiRqTgZsdd0g  NCFwm2-TDb-oBQ2medmYDg        4.201278   \n",
+       "3  CiJat5Up2jAO3B0qTbiN5Q  8mIrX_LrOnAqWsB5JrOojQ        4.880460   \n",
+       "4  wkrFqNxwTEEkG3mJV88Izw  MpmFFw0GE_2iRFPdsRpJbA        4.644147   \n",
        "\n",
        "       2nd Recommendation  2nd Est Rating      3rd Recommendation  \\\n",
-       "0  8mIrX_LrOnAqWsB5JrOojQ        4.636480  IhNASEZ3XnBHmuuVnWdIwA   \n",
-       "1  BH9z7IJ4zydAqgwsbqoVZQ        4.642487  A-uZAD4zP3rRxb44WUGV5w   \n",
-       "2  IhNASEZ3XnBHmuuVnWdIwA        4.719384  8mIrX_LrOnAqWsB5JrOojQ   \n",
-       "3  8mIrX_LrOnAqWsB5JrOojQ        4.655322  sqRX-XLlhx4rs2c1TpBf8A   \n",
-       "4  BH9z7IJ4zydAqgwsbqoVZQ        4.644328  8mIrX_LrOnAqWsB5JrOojQ   \n",
+       "0  8mIrX_LrOnAqWsB5JrOojQ        4.452554  ty5KQYqYRxwXDG_e4pz-4w   \n",
+       "1  BH9z7IJ4zydAqgwsbqoVZQ        4.483402  sqRX-XLlhx4rs2c1TpBf8A   \n",
+       "2  IhNASEZ3XnBHmuuVnWdIwA        4.099090  8mIrX_LrOnAqWsB5JrOojQ   \n",
+       "3  sqRX-XLlhx4rs2c1TpBf8A        4.816272  IhNASEZ3XnBHmuuVnWdIwA   \n",
+       "4  BH9z7IJ4zydAqgwsbqoVZQ        4.642222  IhNASEZ3XnBHmuuVnWdIwA   \n",
        "\n",
        "   3rd Est Rating  \n",
-       "0        4.611072  \n",
-       "1        4.485305  \n",
-       "2        4.657616  \n",
-       "3        4.544820  \n",
-       "4        4.626630  "
+       "0        4.342305  \n",
+       "1        4.354010  \n",
+       "2        4.082000  \n",
+       "3        4.780135  \n",
+       "4        4.635950  "
       ]
      },
-     "execution_count": 338,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2577,7 +2577,7 @@
     "algo = sim_options = {'name': 'msd'\n",
     "                }\n",
     "    \n",
-    "algo = KNNBasic(sim_options=sim_options)\n",
+    "algo = KNNWithMeans(sim_options=sim_options)\n",
     "               \n",
     "algo.fit(trainset)\n",
     "\n",
@@ -2610,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -2652,11 +2652,11 @@
        "      <td>3wB-JjsUjkvdNUDRnChsVg</td>\n",
        "      <td>Brandon</td>\n",
        "      <td>NCFwm2-TDb-oBQ2medmYDg</td>\n",
-       "      <td>4.810028</td>\n",
+       "      <td>4.548096</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.636480</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.611072</td>\n",
+       "      <td>4.452554</td>\n",
+       "      <td>ty5KQYqYRxwXDG_e4pz-4w</td>\n",
+       "      <td>4.342305</td>\n",
        "      <td>1160</td>\n",
        "      <td>3.40</td>\n",
        "    </tr>\n",
@@ -2665,11 +2665,11 @@
        "      <td>YMgZqBUAddmFErxLtCfK_w</td>\n",
        "      <td>Samantha</td>\n",
        "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.714935</td>\n",
+       "      <td>4.505934</td>\n",
        "      <td>BH9z7IJ4zydAqgwsbqoVZQ</td>\n",
-       "      <td>4.642487</td>\n",
-       "      <td>A-uZAD4zP3rRxb44WUGV5w</td>\n",
-       "      <td>4.485305</td>\n",
+       "      <td>4.483402</td>\n",
+       "      <td>sqRX-XLlhx4rs2c1TpBf8A</td>\n",
+       "      <td>4.354010</td>\n",
        "      <td>1709</td>\n",
        "      <td>3.61</td>\n",
        "    </tr>\n",
@@ -2678,11 +2678,11 @@
        "      <td>wa40Yx8wrZfiRqTgZsdd0g</td>\n",
        "      <td>Melanie</td>\n",
        "      <td>NCFwm2-TDb-oBQ2medmYDg</td>\n",
-       "      <td>4.759778</td>\n",
+       "      <td>4.201278</td>\n",
        "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.719384</td>\n",
+       "      <td>4.099090</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.657616</td>\n",
+       "      <td>4.082000</td>\n",
        "      <td>661</td>\n",
        "      <td>3.61</td>\n",
        "    </tr>\n",
@@ -2690,12 +2690,12 @@
        "      <th>3</th>\n",
        "      <td>CiJat5Up2jAO3B0qTbiN5Q</td>\n",
        "      <td>Denise</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.680372</td>\n",
        "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.655322</td>\n",
+       "      <td>4.880460</td>\n",
        "      <td>sqRX-XLlhx4rs2c1TpBf8A</td>\n",
-       "      <td>4.544820</td>\n",
+       "      <td>4.816272</td>\n",
+       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
+       "      <td>4.780135</td>\n",
        "      <td>1021</td>\n",
        "      <td>4.11</td>\n",
        "    </tr>\n",
@@ -2703,12 +2703,12 @@
        "      <th>4</th>\n",
        "      <td>wkrFqNxwTEEkG3mJV88Izw</td>\n",
        "      <td>Olivia</td>\n",
-       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
-       "      <td>4.671760</td>\n",
+       "      <td>MpmFFw0GE_2iRFPdsRpJbA</td>\n",
+       "      <td>4.644147</td>\n",
        "      <td>BH9z7IJ4zydAqgwsbqoVZQ</td>\n",
-       "      <td>4.644328</td>\n",
-       "      <td>8mIrX_LrOnAqWsB5JrOojQ</td>\n",
-       "      <td>4.626630</td>\n",
+       "      <td>4.642222</td>\n",
+       "      <td>IhNASEZ3XnBHmuuVnWdIwA</td>\n",
+       "      <td>4.635950</td>\n",
        "      <td>1065</td>\n",
        "      <td>3.80</td>\n",
        "    </tr>\n",
@@ -2718,28 +2718,28 @@
       ],
       "text/plain": [
        "                  user_id      name      1st Recommendation  1st Est Rating  \\\n",
-       "0  3wB-JjsUjkvdNUDRnChsVg   Brandon  NCFwm2-TDb-oBQ2medmYDg        4.810028   \n",
-       "1  YMgZqBUAddmFErxLtCfK_w  Samantha  IhNASEZ3XnBHmuuVnWdIwA        4.714935   \n",
-       "2  wa40Yx8wrZfiRqTgZsdd0g   Melanie  NCFwm2-TDb-oBQ2medmYDg        4.759778   \n",
-       "3  CiJat5Up2jAO3B0qTbiN5Q    Denise  IhNASEZ3XnBHmuuVnWdIwA        4.680372   \n",
-       "4  wkrFqNxwTEEkG3mJV88Izw    Olivia  IhNASEZ3XnBHmuuVnWdIwA        4.671760   \n",
+       "0  3wB-JjsUjkvdNUDRnChsVg   Brandon  NCFwm2-TDb-oBQ2medmYDg        4.548096   \n",
+       "1  YMgZqBUAddmFErxLtCfK_w  Samantha  IhNASEZ3XnBHmuuVnWdIwA        4.505934   \n",
+       "2  wa40Yx8wrZfiRqTgZsdd0g   Melanie  NCFwm2-TDb-oBQ2medmYDg        4.201278   \n",
+       "3  CiJat5Up2jAO3B0qTbiN5Q    Denise  8mIrX_LrOnAqWsB5JrOojQ        4.880460   \n",
+       "4  wkrFqNxwTEEkG3mJV88Izw    Olivia  MpmFFw0GE_2iRFPdsRpJbA        4.644147   \n",
        "\n",
        "       2nd Recommendation  2nd Est Rating      3rd Recommendation  \\\n",
-       "0  8mIrX_LrOnAqWsB5JrOojQ        4.636480  IhNASEZ3XnBHmuuVnWdIwA   \n",
-       "1  BH9z7IJ4zydAqgwsbqoVZQ        4.642487  A-uZAD4zP3rRxb44WUGV5w   \n",
-       "2  IhNASEZ3XnBHmuuVnWdIwA        4.719384  8mIrX_LrOnAqWsB5JrOojQ   \n",
-       "3  8mIrX_LrOnAqWsB5JrOojQ        4.655322  sqRX-XLlhx4rs2c1TpBf8A   \n",
-       "4  BH9z7IJ4zydAqgwsbqoVZQ        4.644328  8mIrX_LrOnAqWsB5JrOojQ   \n",
+       "0  8mIrX_LrOnAqWsB5JrOojQ        4.452554  ty5KQYqYRxwXDG_e4pz-4w   \n",
+       "1  BH9z7IJ4zydAqgwsbqoVZQ        4.483402  sqRX-XLlhx4rs2c1TpBf8A   \n",
+       "2  IhNASEZ3XnBHmuuVnWdIwA        4.099090  8mIrX_LrOnAqWsB5JrOojQ   \n",
+       "3  sqRX-XLlhx4rs2c1TpBf8A        4.816272  IhNASEZ3XnBHmuuVnWdIwA   \n",
+       "4  BH9z7IJ4zydAqgwsbqoVZQ        4.642222  IhNASEZ3XnBHmuuVnWdIwA   \n",
        "\n",
        "   3rd Est Rating  review_count  average_stars  \n",
-       "0        4.611072          1160           3.40  \n",
-       "1        4.485305          1709           3.61  \n",
-       "2        4.657616           661           3.61  \n",
-       "3        4.544820          1021           4.11  \n",
-       "4        4.626630          1065           3.80  "
+       "0        4.342305          1160           3.40  \n",
+       "1        4.354010          1709           3.61  \n",
+       "2        4.082000           661           3.61  \n",
+       "3        4.780135          1021           4.11  \n",
+       "4        4.635950          1065           3.80  "
       ]
      },
-     "execution_count": 275,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -2914,7 +2914,7 @@
        "2  Museums;Active Life;Amusement Parks;Performing...  "
       ]
      },
-     "execution_count": 310,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7035,7 +7035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7122,7 +7122,7 @@
     "    \n",
     "    algo = sim_options = {'name': 'msd',\n",
     "               }\n",
-    "    algo = KNNBasic(sim_options=sim_options)\n",
+    "    algo = KNNWithMeans(sim_options=sim_options)\n",
     "    \n",
     "    # Use Train_Test_Split on data\n",
     "    trainset, testset = train_test_split(data=data, test_size=.3, random_state=9)\n",
@@ -7247,7 +7247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -7274,21 +7274,21 @@
       "\n",
       "\n",
       "Baseline Scores using Random Ratings\n",
-      "RMSE: 1.2783\n",
-      "1.2782830037522428\n",
-      "MAE:  1.0195\n",
-      "1.0195109327305234\n",
+      "RMSE: 1.1840\n",
+      "1.1840159537547328\n",
+      "MAE:  0.9408\n",
+      "0.940835459498155\n",
       "\n",
       "\n",
       "Computing the msd similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "Accuracy Score Using Model\n",
-      "RMSE: 0.8626\n",
-      "0.8626048718622863\n",
-      "MAE:  0.6618\n",
-      "0.6618422548596796\n",
-      "CPU times: user 57.1 s, sys: 12.5 s, total: 1min 9s\n",
-      "Wall time: 1min 15s\n"
+      "RMSE: 0.8588\n",
+      "0.858808502955881\n",
+      "MAE:  0.6711\n",
+      "0.6710567812007021\n",
+      "CPU times: user 55 s, sys: 9.78 s, total: 1min 4s\n",
+      "Wall time: 1min 9s\n"
      ]
     }
    ],
